<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_button_txt">Поиск</string>
    <string name="media_button_txt">Медиатека</string>
    <string name="settings_button_txt">Настройки</string>
    <string name="setting_item_theme">Темная тема</string>
    <string name="setting_item_share">Поделиться приложением</string>
    <string name="setting_item_support">Написать в поддержку</string>
    <string name="setting_item_agreement">Пользовательское соглашение</string>
    <string name="support_email">twist.of.the.myth@gmail.com</string>
    <string name="support_default_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_default_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="net_error">Проблемы со связью</string>
    <string name="net_error_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_query_update_button">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_search_history_button">Очистить историю</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="favorites_tab">Избранные треки</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_playlist">Плейлист пуст</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="search_nav_item">Поиск</string>
    <string name="media_nav_item">Медиатека</string>
    <string name="settings_nav_item">Настройки</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="create_playlist_button">Создать</string>
    <string name="save_playlist_button">Сохранить</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="cancel_playlist_creating_title">Завершить создание плейлиста?</string>
    <string name="cancel_playlist_creating_subtitle">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_complete">Завершить</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_delete">Удалить</string>
    <string name="dialog_no">Нет</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_saved">Плейлист %s сохранен</string>
    <string name="playlist_deleted">Плейлист %s удален</string>
    <string name="track_deleted">Трек удален из плейлиста</string>
    <string name="track_added_to_playlist">Трек добавлен в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_item_share">Поделиться</string>
    <string name="playlist_item_edit">Редактировать информацию</string>
    <string name="playlist_item_delete">Удалить плейлист</string>
    <string name="dialog_delete_playlist_title">Удалить плейлист</string>
    <string name="dialog_delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="dialog_delete_track_title">Удалить трек</string>
    <string name="dialog_delete_track_message">Хотите удалить трек?</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="track_not_found_error">Не удалось получить информацию о треке</string>
</resources>