<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:text="@string/settings_button_txt"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/settings_button_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout style="@style/SettingsItem">
            <TextView style="@style/SettingsItemText"
                android:text="@string/setting_item_theme"
                />
            <Switch style="@style/SettingsItemSwitch" />
        </LinearLayout>

        <LinearLayout style="@style/SettingsItem">
            <TextView style="@style/SettingsItemText"
                android:text="@string/setting_item_share" />
                <ImageView style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_share"/>
        </LinearLayout>

        <LinearLayout style="@style/SettingsItem">
            <TextView style="@style/SettingsItemText"
                android:text="@string/setting_item_support" />
                <ImageView style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_support"/>
        </LinearLayout>

        <LinearLayout style="@style/SettingsItem">
            <TextView style="@style/SettingsItemText"
                android:text="@string/setting_item_agreement" />
                <ImageView style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_arrow_forward"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.appbar.AppBarLayout>
