<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".settings.ui.view.SettingsFragment">

    <TextView
        style="@style/PM.Text.ScreenTitle"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/settings_button_txt" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_theme_button"
        style="@style/PM.Text.ListTitle.Settings.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_item_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_share_tv"
        style="@style/PM.Text.ListTitle.Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/setting_item_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_support_tv"
        style="@style/PM.Text.ListTitle.Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/setting_item_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_agreement_tv"
        style="@style/PM.Text.ListTitle.Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/setting_item_agreement" />
</LinearLayout>
