<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search_button_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:cornerRadius="@dimen/button_corner"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/default_padding"
        app:iconTint="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_button_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:cornerRadius="@dimen/button_corner"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/default_padding"
        app:iconTint="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings_button_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:cornerRadius="@dimen/button_corner"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/default_padding"
        app:iconTint="@color/black" />

</LinearLayout>