<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarWithBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:title="@string/search_button_txt" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <EditText
            android:id="@+id/search_et"
            style="@style/EditTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_button_txt"
            android:imeOptions="actionDone"
            android:maxLength="30"
            android:singleLine="true" />

        <ImageView
            style="@style/EditTextIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_search"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/clear_search_iv"
            style="@style/EditTextIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>



    <LinearLayout
        android:id="@+id/search_history_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/search_history_title_tv"
            style="@style/PM.Text.Notification.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/you_searched"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvSearchHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_marginBottom="24dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/clear_history_btn"
            style="@style/PM.Button.Notification"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:text="@string/clear_search_history_button"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <ImageView
        android:id="@+id/error_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="154dp"
        android:visibility="gone"
        tools:src="@drawable/placeholder_net_error"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/error_tv"
        style="@style/PM.Text.Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:text="@string/net_error"
        tools:visibility="visible" />

    <Button
        android:id="@+id/error_update_btn"
        style="@style/PM.Button.Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/search_query_update_button"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RvSearchResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp" />

</LinearLayout>