<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".player.ui.view.TrackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startBorder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endBorder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/albumHorizontalBorder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/arrow_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_toolbar_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/album_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:src="@drawable/placeholder_full_album"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/albumHorizontalBorder"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/arrow_back_iv" />

        <TextView
            android:id="@+id/track_name_tv"
            style="@style/PM.Text.TrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/album_iv"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/author_name_tv"
            style="@style/PM.Text.TrackAuthorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/track_name_tv"
            tools:text="The Beatles" />

        <ImageView
            android:id="@+id/add_track_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_add_track"
            app:layout_constraintBottom_toBottomOf="@id/play_track_iv"
            app:layout_constraintEnd_toStartOf="@id/play_track_iv"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toTopOf="@id/play_track_iv" />


        <com.practicum.playlistmaker.player.ui.view.PlaybackButtonView
            android:id="@+id/play_track_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:play_icon_ref="@drawable/button_play_track"
            app:stop_icon_ref="@drawable/button_pause_track"
            app:size="100dp"
            app:layout_constraintEnd_toStartOf="@id/like_track_iv"
            app:layout_constraintStart_toEndOf="@id/add_track_iv"
            app:layout_constraintTop_toBottomOf="@id/author_name_tv" />

        <ImageView
            android:id="@+id/like_track_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_like_track"
            app:layout_constraintBottom_toBottomOf="@id/play_track_iv"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/play_track_iv"
            app:layout_constraintTop_toTopOf="@id/play_track_iv" />

        <TextView
            android:id="@+id/time_tv"
            style="@style/PM.Text.TrackAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/play_track_iv"
            tools:text="0:30" />

        <TextView
            android:id="@+id/track_duration_tv"
            style="@style/PM.Text.TrackDescription.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/track_duration"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/time_tv"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/album_name_tv"
            style="@style/PM.Text.TrackDescription.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_album"
            app:layout_constraintBottom_toTopOf="@id/track_year_tv"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/track_duration_tv" />

        <TextView
            android:id="@+id/track_year_tv"
            style="@style/PM.Text.TrackDescription.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_year"
            app:layout_constraintBottom_toTopOf="@id/track_genre_tv"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/album_name_tv" />

        <TextView
            android:id="@+id/track_genre_tv"
            style="@style/PM.Text.TrackDescription.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_genre"
            app:layout_constraintBottom_toTopOf="@id/track_country_tv"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/track_year_tv" />

        <TextView
            android:id="@+id/track_country_tv"
            style="@style/PM.Text.TrackDescription.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/track_country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/track_genre_tv" />

        <TextView
            android:id="@+id/track_duration_value_tv"
            style="@style/PM.Text.TrackDescription.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="@id/track_duration_tv"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            tools:text="5:35" />

        <TextView
            android:id="@+id/album_name_value_tv"
            style="@style/PM.Text.TrackDescription.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/album_name_tv"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/track_year_value_tv"
            style="@style/PM.Text.TrackDescription.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/track_year_tv"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            tools:text="1965" />

        <TextView
            android:id="@+id/track_genre_value_tv"
            style="@style/PM.Text.TrackDescription.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/track_genre_tv"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            tools:text="Rock" />

        <TextView
            android:id="@+id/track_country_value_tv"
            style="@style/PM.Text.TrackDescription.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/track_country_tv"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corners_bs"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="400dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:background="@drawable/round_thing"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/error_tv"
            style="@style/PM.Text.Notification.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/add_to_playlist_title" />

        <Button
            android:id="@+id/action_btn"
            style="@style/PM.Button.Notification"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/new_playlist_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>